Fix Dark Mode Style

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,11 +4,15 @@
   --background-color: #FFFFFF;
   --primary-color: #21618C;
   --dark-color: #333333;
-  --light-color-degree1: #EBF5FB;
-  --light-color-degree2: #F7FBFD;
+  --light-color-degree1: #F7FBFD;
+  --light-color-degree2: #EBF5FB;
+  --light-color-degree3: #5DADE2;
+  --btn-primary-background: #21618C;
+  --btn-primary-color: #FFFFFF;
+  --btn-disabled-background: #EBF5FB;
+  --btn-disabled-color: #21618C;
   --danger-color: #E74C3C;
   --gold-color: #F4C150;
-  ;
 }
 
 /* ---------- Reset ---------- */
@@ -97,9 +101,9 @@ a {
 }
 /* Tag */
 .tag {
-  background: var(--light-color-degree1);
+  background: var(--light-color-degree2);
   padding: 5px;
-  border: #5DADE2 solid 0.5px;
+  border: var(--light-color-degree3) solid 0.5px;
   border-radius: 5px;
   margin-right: 5px;
 }
@@ -143,7 +147,6 @@ a {
 
 /* - Btn - */
 .btn {
-  /* max-width: 200px; */
   font-size: 1.2em;
   padding: 10px;
   border-radius: 5px;
@@ -151,19 +154,19 @@ a {
   cursor: pointer;
 }
 
-.btn-primary {
-  background: var(--primary-color);
-  color: #fff;
-}
-
 .btn-center {
   align-self: center;
   justify-self: center;
 }
 
+.btn-primary {
+  background: var(--btn-primary-background); /* primary-color */
+  color: var(--btn-primary-color); /* #fff */
+}
+
 .btn-disabled {
-background: var(--light-color-degree1);
-color: var(--primary-color);
+background: var(--btn-disabled-background); /* --light-color-degree2 */
+color: var(--btn-disabled-color); /* primary-color */
 cursor: wait;
 }
 
@@ -216,7 +219,7 @@ cursor: wait;
   position: relative;
   display: flex;
   padding: 20px 0;
-  background: var(--light-color-degree2);
+  background: var(--light-color-degree1);
 }
 
 #main-header  .show-more {
@@ -349,7 +352,7 @@ cursor: wait;
 
 #navbar ul li span.dropbtn:hover {
   color: var(--primary-color);
-  background: var(--light-color-degree1);
+  background: var(--light-color-degree2);
   border: var(--primary-color) solid 2px;
   border-radius: 50%;
   margin: -2px;
@@ -358,7 +361,7 @@ cursor: wait;
 #navbar ul li .dropdown-content {
   display: none;
   position: absolute;
-  background-color: var(--light-color-degree1);
+  background-color: var(--light-color-degree2);
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   border-radius: 5px;
   z-index: 1;
@@ -457,7 +460,7 @@ cursor: wait;
 #navbar ul li a.search-link:hover,
 #navbar ul li a.search-link.active {
   color: var(--primary-color);
-  background: var(--light-color-degree1);
+  background: var(--light-color-degree2);
   border: var(--primary-color) solid 2px;
   border-radius: 50%;
   margin: -2px;
@@ -559,7 +562,7 @@ ul.milestone li {
   border-radius: 6px;
   width: 500px;
   box-shadow: 0 0 4px rgba(0, 0, 0, .12), 0 2px 2px rgba(0, 0, 0, .08);
-  background: var(--light-color-degree2);
+  background: var(--light-color-degree1);
 }
 
 ul.milestone li.current-milestone > div.tag-flash {
@@ -674,7 +677,7 @@ ul li.milestone-action span.number span {
   width: 100%;
   height: 60px;
   font-size: 1.5em;
-  background: var(--light-color-degree1);
+  background: var(--light-color-degree2);
   padding: 10px;
   margin: 20px 0;
 }
@@ -893,7 +896,7 @@ ul li.milestone-action span.number span {
   padding: 20px;
   text-align: center;
   font-weight: bold;
-  background: var(--light-color-degree2);
+  background: var(--light-color-degree1);
   color: #888;
 }
 
@@ -989,7 +992,7 @@ ul li.milestone-action span.number span {
   #navbar ul li span.dropbtn {
     display: inline-block;
     width: 100%;
-    background: var(--light-color-degree1);
+    background: var(--light-color-degree2);
     padding: 5px;
     margin: 0;
     text-align: center;
